--- a/perf_report_template.html
+++ b/perf_report_template.html
@@ -97,7 +97,9 @@
             content: " \25bc ";
         }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- jquery 1.11.3 -->
+    <script src="https://assets.ubuntu.com/v1/37b1db88-jquery.min.js"></script>
+
     <!-- Quick glue code for 'tabs' -->
     <script type="text/javascript">
       $(document).ready(function(){
